# PointCloud-Studio

./: .gitignore  CMakeLists.txt  Helix-Toolkit.Sample.PointCloud.sln  PointCloud Studio.sln  README.MD
runtimes/lib/: pcl_io.lib  pcl_kdtree.lib  pcl_ml.lib  pcl_registration.lib  pcl_surface.lib
src/PCLSharp.Client/: App.config  App.xaml  App.xaml.cs  PCLSharp.Client.csproj  Startup.cs
src/PCLSharp.Extensions.Helix/: GeometryExtension.cs  PCLSharp.Extensions.Helix.csproj  TypesExtension.cs
src/PCLSharp.Extensions.Plotter/: PCLSharp.Extensions.Plotter.csproj  PlotExtension.cs  ScottExtension.cs
src/PCLSharp.Features/: PCLSharp.Features.csproj
src/PCLSharp.Features.Native/: PCLSharp.Features.Native.vcxproj  PCLSharp.Features.Native.vcxproj.filters  pcl_keypoints.cpp  pcl_keypoints.h
src/PCLSharp.FileIO.Native/: PCLSharp.FileIO.Native.vcxproj  (+3 more)
src/PCLSharp.Modules.Native/: CMakeLists.txt  PCLSharp.Modules.Native.vcxproj  PCLSharp.Modules.Native.vcxproj.filters  Property.PCL.Debug.x64.props  Property.PCL.Release.x64.props  Version.rc  pcl_common.cpp  pcl_common.h  pcl_conductor.h  pcl_dispose.cpp  pcl_dispose.h  pcl_features.cpp  pcl_features.h  pcl_files.cpp  pcl_files.h  pcl_filters.cpp  pcl_filters.h  pcl_keypoints.cpp  pcl_keypoints.h  pcl_normals.cpp  pcl_normals.h  pcl_registrations.cpp  pcl_registrations.h  pcl_search.cpp  pcl_search.h  pcl_segmentations.cpp  pcl_segmentations.h  pcl_shapes.cpp  pcl_shapes.h
src/PCLSharp.Primitives.Native/: CMakeLists.txt  PCLSharp.Primitives.Native.vcxproj  PCLSharp.Primitives.Native.vcxproj.filters  Property.PCL.Debug.x64.props  Property.PCL.Release.x64.props  Version.rc  alignment_result.h  boxf.h  descriptors_mxn.h  dispose.cpp  dispose.h  features_map.cpp  features_map.h  fpfh_signature33f.h  fpfh_signature33fs.h  narf36f.h  narf36fs.h  normal3f.h  normal3fs.h  pfh_signature125f.h  pfh_signature125fs.h  point3color4.h  point3color4s.h  point3f.h  point3fs.h  point3normal3.h  point3normal3s.h  pose.h  primitives_map.cpp  primitives_map.h  shape_context1980f.h  shape_context1980fs.h  shot352f.h  shot352fs.h
(+285 files in other folders)
